--- a/index.html
+++ b/index.html
@@ -181,20 +181,218 @@
     <span><b>Setiap usaha tidak akan sia-sia, bonus dan komisi adalah hasilnya!</b></span>
   </div>
   
-  <h4>1. kursus contoh</h4>
-  <h4><b>1. kursus contih</b></h4>
-  <p>2. ksursus contoj</p>
-  <p><b>1. kirus bcinajjai</b></p>
-  
-  <!-- Tombol untuk menampilkan/menyembunyikan penjelasan -->
-  <button class="toggle-button" onclick="toggleContent('content-box-1')">
-    👉 Penjelasan Ebook 1
-  </button>
-  <div class="content-box" id="content-box-1">
-    <p><b>Atomic Habits</b></p>
-    <p>Ingin mengubah hidupmu menjadi lebih baik? Mulailah dari hal-hal kecil. "Atomic Habits" mengajarkanmu bahwa perubahan besar dimulai dari kebiasaan kecil yang dilakukan secara konsisten. Bayangkan hidupmu seperti sebuah taman. Dengan rajin menyiram dan merawat tanaman setiap hari, tamanmu akan tumbuh subur dan indah. Begitu pula dengan kebiasaanmu. Dengan mengubah kebiasaan kecil, kamu akan melihat perubahan besar dalam hidupmu.</p>
-    <p>Buku ini akan membantumu membangun kebiasaan positif dan menghilangkan kebiasaan buruk. James Clear, pencetus metode ini, memberikan panduan praktis dan mudah diikuti untuk menerapkan perubahan dalam hidupmu. Mulai dari mengatur lingkungan sekitar, memberikan penghargaan pada diri sendiri, hingga mengatasi hambatan, semua dijelaskan secara rinci. Dengan "Atomic Habits", kamu akan memiliki semua alat yang dibutuhkan untuk mencapai tujuanmu.</p>
-  </div>
+  [22/2 06.35] Meta AI: Berikut adalah kode HTML yang Anda minta:
+
+<p><b>1. Kursus Bisnis: Membangun Pondasi Kesuksesan dalam Dunia Bisnis</b></p>
+<p></p>
+<button class="toggle-button" onclick="toggleContent('content-box-1')"> 👉 Deskripsi Kursus </button>
+<div class="content-box" id="content-box-1">
+<p><b>Kursus Bisnis: Membangun Pondasi Kesuksesan dalam Dunia Bisnis</b></p>
+Hhhhhhhh
+</div>
+
+<p><b>2. Kursus Digital Marketing: Mengukir Keberhasilan dalam Era Digital</b></p>
+<p></p>
+<button class="toggle-button" onclick="toggleContent('content-box-2')"> 👉 Deskripsi Kursus </button>
+<div class="content-box" id="content-box-2">
+<p><b>Kursus Digital Marketing: Mengukir Keberhasilan dalam Era Digital</b></p>
+Hhhhhhhh
+</div>
+
+<p><b>3. Kursus WhatsApp Marketing: Menguasai Strategi Pemasaran Melalui WhatsApp</b></p>
+<p></p>
+<button class="toggle-button" onclick="toggleContent('content-box-3')"> 👉 Deskripsi Kursus </button>
+<div class="content-box" id="content-box-3">
+<p><b>Kursus WhatsApp Marketing: Menguasai Strategi Pemasaran Melalui WhatsApp</b></p>
+Hhhhhhhh
+</div>
+
+<p><b>4. Kursus Facebook Marketing: Memanfaatkan Potensi Pemasaran di Facebook</b></p>
+<p></p>
+<button class="toggle-button" onclick="toggleContent('content-box-4')"> 👉 Deskripsi Kursus </button>
+<div class="content-box" id="content-box-4">
+<p><b>Kursus Facebook Marketing: Memanfaatkan Potensi Pemasaran di Facebook</b></p>
+Hhhhhhhh
+</div>
+
+<p><b>5. Kursus Instagram Marketing: Menguasai Pemasaran di Platform Visual</b></p>
+<p></p>
+<button class="toggle-button" onclick="toggleContent('content-box-5')"> 👉 Deskripsi Kursus </button>
+<div class="content-box" id="content-box-5">
+<p><b>Kursus Instagram Marketing: Menguasai Pemasaran di Platform Visual</b></p>
+Hhhhhhhh
+</div>
+
+<p><b>6. Kursus Telegram Marketing: Menguasai Pemasaran Melalui Telegram</b></p>
+<p></p>
+<button class="toggle-button" onclick="toggleContent('content-box-6')"> 👉 Deskripsi Kursus </button>
+<div class="content-box" id="content-box-6">
+<p><b>Kursus Telegram Marketing: Menguasai Pemasaran Melalui Telegram</b></p>
+Hhhhhhhh
+</div>
+
+<p><b>7. Kursus TikTok Marketing: Menguasai Pemasaran di Platform Video Pendek</b></p>
+<p></p>
+<button class="toggle-button" onclick="toggleContent('content-box-7')"> 👉 Deskripsi Kursus </button>
+<div class="content-box" id="content-box-7">
+<p><b>Kursus TikTok Marketing: Menguasai Pemasaran di Platform Video Pendek</b></p>
+Hhhhhhhh
+</div>
+
+<p><b>8. Kursus Membuat Website Gratis atau Berbayar dan sangat mudah tanpa coding menggunakan wordpress (di HP/PC)</b></p>
+<p></p>
+<button class="toggle-button" onclick="toggleContent('content-box-8')"> 👉 Deskripsi Kursus </button>
+<div class="content-box" id="content-box-8">
+<p><b>Kursus Membuat Website Gratis atau Berbayar dan sangat mudah tanpa coding menggunakan wordpress (di HP/PC)</b></p>
+Hhhhhhhh
+</div>
+
+<p><b>9. Kursus Berbagai Cara Menghasilkan Uang di Facebook</b></p>
+<p></p>
+<button class="toggle-button" onclick="toggleContent('content-box-9')"> 👉 Deskripsi Kursus </button>
+<div class="content-box" id="content-box-9">
+<p><b>Kursus Berbagai Cara Menghasilkan Uang di Facebook</b></p>
+Hhhhhhhh
+</div>
+
+<p><b>10. Kursus Facebook Ads: Menguasai Strategi Iklan Efektif di Platform Terbesar</b></p>
+<p></p>
+<button class="toggle-button" onclick="toggleContent('content-box-10')">
+[22/2 06.36] Meta AI: Berikut adalah lanjutan dari kode HTML yang Anda minta:
+
+<p><b>10. Kursus Facebook Ads: Menguasai Strategi Iklan Efektif di Platform Terbesar</b></p>
+<p></p>
+<button class="toggle-button" onclick="toggleContent('content-box-10')"> 👉 Deskripsi Kursus </button>
+<div class="content-box" id="content-box-10">
+<p><b>Kursus Facebook Ads: Menguasai Strategi Iklan Efektif di Platform Terbesar</b></p>
+Hhhhhhhh
+</div>
+
+<p><b>11. Kursus Google Ads: Mengoptimalkan Kampanye Iklan Anda dengan Keahlian</b></p>
+<p></p>
+<button class="toggle-button" onclick="toggleContent('content-box-11')"> 👉 Deskripsi Kursus </button>
+<div class="content-box" id="content-box-11">
+<p><b>Kursus Google Ads: Mengoptimalkan Kampanye Iklan Anda dengan Keahlian</b></p>
+Hhhhhhhh
+</div>
+
+<p><b>12. Kursus Instagram Ads: Menguasai Pemasaran Melalui Platform Instagram</b></p>
+<p></p>
+<button class="toggle-button" onclick="toggleContent('content-box-12')"> 👉 Deskripsi Kursus </button>
+<div class="content-box" id="content-box-12">
+<p><b>Kursus Instagram Ads: Menguasai Pemasaran Melalui Platform Instagram</b></p>
+Hhhhhhhh
+</div>
+
+<p><b>13. Kursus TikTok Ads: Menguasai Pemasaran Melalui Platform TikTok</b></p>
+<p></p>
+<button class="toggle-button" onclick="toggleContent('content-box-13')"> 👉 Deskripsi Kursus </button>
+<div class="content-box" id="content-box-13">
+<p><b>Kursus TikTok Ads: Menguasai Pemasaran Melalui Platform TikTok</b></p>
+Hhhhhhhh
+</div>
+
+<p><b>14. Kursus SEO: Menguasai Optimasi Mesin Pencari untuk Pertumbuhan Bisnis Online</b></p>
+<p></p>
+<button class="toggle-button" onclick="toggleContent('content-box-14')"> 👉 Deskripsi Kursus </button>
+<div class="content-box" id="content-box-14">
+<p><b>Kursus SEO: Menguasai Optimasi Mesin Pencari untuk Pertumbuhan Bisnis Online</b></p>
+Hhhhhhhh
+</div>
+
+<p><b>15. Kursus Microsoft Word: Menguasai Pengolahan Kata Profesional</b></p>
+<p></p>
+<button class="toggle-button" onclick="toggleContent('content-box-15')"> 👉 Deskripsi Kursus </button>
+<div class="content-box" id="content-box-15">
+<p><b>Kursus Microsoft Word: Menguasai Pengolahan Kata Profesional</b></p>
+Hhhhhhhh
+</div>
+
+<p><b>16. Kursus Panduan Menggunakan Laptop/Komputer</b></p>
+<p></p>
+<button class="toggle-button" onclick="toggleContent('content-box-16')"> 👉 Deskripsi Kursus </button>
+<div class="content-box" id="content-box-16">
+<p><b>Kursus Panduan Menggunakan Laptop/Komputer</b></p>
+Hhhhhhhh
+</div>
+
+<p><b>17. Kursus Windows: Menguasai Sistem Operasi Modern</b></p>
+<p></p>
+<button class="toggle-button" onclick="toggleContent('content-box-17')"> 👉 Deskripsi Kursus </button>
+<div class="content-box" id="content-box-17">
+<p><b>Kursus Windows: Menguasai Sistem Operasi Modern</b></p>
+Hhhhhhhh
+</div>
+
+<p><b>18. Kursus Microsoft Excel: Menguasai Spreadsheet Profesional</b></p>
+<p></p>
+<button class="toggle-button" onclick="toggleContent('content-box-18')"> 👉 Deskripsi Kursus </button>
+<div class="content-box" id="content-box-18">
+<p><b>Kursus Microsoft Excel: Menguasai Spreadsheet Profesional</b></p>
+Hhhhhhhh
+</div>
+
+<p><b>19. Kursus Google Sheets: Menguasai Spreadsheet dengan Google Sheets</b></p>
+<p></p>
+<button class="toggle-button" onclick="toggleContent('content-box-19')"> 👉 Deskripsi Kursus </button>
+<div class="content-box" id="content
+[22/2 06.36] Meta AI: Berikut adalah lanjutan dari kode HTML yang Anda minta:
+
+<p><b>19. Kursus Google Sheets: Menguasai Spreadsheet dengan Google Sheets</b></p>
+<p></p>
+<button class="toggle-button" onclick="toggleContent('content-box-19')"> 👉 Deskripsi Kursus </button>
+<div class="content-box" id="content-box-19">
+<p><b>Kursus Google Sheets: Menguasai Spreadsheet dengan Google Sheets</b></p>
+Hhhhhhhh
+</div>
+
+<p><b>20. Kursus Microsoft PowerPoint: Menguasai Presentasi Visual yang Mengesankan</b></p>
+<p></p>
+<button class="toggle-button" onclick="toggleContent('content-box-20')"> 👉 Deskripsi Kursus </button>
+<div class="content-box" id="content-box-20">
+<p><b>Kursus Microsoft PowerPoint: Menguasai Presentasi Visual yang Mengesankan</b></p>
+Hhhhhhhh
+</div>
+
+<p><b>21. Kursus Microsoft Office: Menguasai Suite Perangkat Lunak Produktivitas</b></p>
+<p></p>
+<button class="toggle-button" onclick="toggleContent('content-box-21')"> 👉 Deskripsi Kursus </button>
+<div class="content-box" id="content-box-21">
+<p><b>Kursus Microsoft Office: Menguasai Suite Perangkat Lunak Produktivitas</b></p>
+Hhhhhhhh
+</div>
+
+<p><b>22. Kursus Adobe Photoshop: Menguasai Seni Manipulasi Visual</b></p>
+<p></p>
+<button class="toggle-button" onclick="toggleContent('content-box-22')"> 👉 Deskripsi Kursus </button>
+<div class="content-box" id="content-box-22">
+<p><b>Kursus Adobe Photoshop: Menguasai Seni Manipulasi Visual</b></p>
+Hhhhhhhh
+</div>
+
+<p><b>23. Kursus Adobe Illustrator: Mengembangkan Kreativitas dalam Desain Grafis</b></p>
+<p></p>
+<button class="toggle-button" onclick="toggleContent('content-box-23')"> 👉 Deskripsi Kursus </button>
+<div class="content-box" id="content-box-23">
+<p><b>Kursus Adobe Illustrator: Mengembangkan Kreativitas dalam Desain Grafis</b></p>
+Hhhhhhhh
+</div>
+
+<p><b>24. Kursus Adobe XD: Merancang Antarmuka Pengguna yang Menarik dan Responsif</b></p>
+<p></p>
+<button class="toggle-button" onclick="toggleContent('content-box-24')"> 👉 Deskripsi Kursus </button>
+<div class="content-box" id="content-box-24">
+<p><b>Kursus Adobe XD: Merancang Antarmuka Pengguna yang Menarik dan Responsif</b></p>
+Hhhhhhhh
+</div>
+
+<p><b>25. Kursus CorelDRAW: Menguasai Seni Desain Grafis yang Kreatif</b></p>
+<p></p>
+<button class="toggle-button" onclick="toggleContent('content-box-25')"> 👉 Deskripsi Kursus </button>
+<div class="content-box" id="content-box-25">
+<p><b>Kursus CorelDRAW: Menguasai Seni Desain Grafis yang Kreatif</b></p>
+Hhhhhhhh
+</div>
   
   <p>
     <a href="https://SAFF35.github.io/Dashboard" class="button"><b>KEMBALI KE HOME</b></a>
