--- a/index.html
+++ b/index.html
@@ -107,6 +107,7 @@
     p {
       text-align: center;
       color: #000;
+      width: 340px
     }
     /* Tombol utama */
     .button {
@@ -181,8 +182,6 @@
     <span><b>Setiap usaha tidak akan sia-sia, bonus dan komisi adalah hasilnya!</b></span>
   </div>
   
-  [22/2 06.35] Meta AI: Berikut adalah kode HTML yang Anda minta:
-
 <p><b>1. Kursus Bisnis: Membangun Pondasi Kesuksesan dalam Dunia Bisnis</b></p>
 <p></p>
 <button class="toggle-button" onclick="toggleContent('content-box-1')"> 👉 Deskripsi Kursus </button>
@@ -257,11 +256,6 @@ Hhhhhhhh
 
 <p><b>10. Kursus Facebook Ads: Menguasai Strategi Iklan Efektif di Platform Terbesar</b></p>
 <p></p>
-<button class="toggle-button" onclick="toggleContent('content-box-10')">
-[22/2 06.36] Meta AI: Berikut adalah lanjutan dari kode HTML yang Anda minta:
-
-<p><b>10. Kursus Facebook Ads: Menguasai Strategi Iklan Efektif di Platform Terbesar</b></p>
-<p></p>
 <button class="toggle-button" onclick="toggleContent('content-box-10')"> 👉 Deskripsi Kursus </button>
 <div class="content-box" id="content-box-10">
 <p><b>Kursus Facebook Ads: Menguasai Strategi Iklan Efektif di Platform Terbesar</b></p>
@@ -331,12 +325,6 @@ Hhhhhhhh
 <p><b>Kursus Microsoft Excel: Menguasai Spreadsheet Profesional</b></p>
 Hhhhhhhh
 </div>
-
-<p><b>19. Kursus Google Sheets: Menguasai Spreadsheet dengan Google Sheets</b></p>
-<p></p>
-<button class="toggle-button" onclick="toggleContent('content-box-19')"> 👉 Deskripsi Kursus </button>
-<div class="content-box" id="content
-[22/2 06.36] Meta AI: Berikut adalah lanjutan dari kode HTML yang Anda minta:
 
 <p><b>19. Kursus Google Sheets: Menguasai Spreadsheet dengan Google Sheets</b></p>
 <p></p>
