--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
     p {
       text-align: center;
       color: #000;
-      width: 340px
+      margin: 10px;
     }
     /* Tombol utama */
     .button {
@@ -381,10 +381,11 @@ Hhhhhhhh
 <p><b>Kursus CorelDRAW: Menguasai Seni Desain Grafis yang Kreatif</b></p>
 Hhhhhhhh
 </div>
-  
+<div>
   <p>
     <a href="https://SAFF35.github.io/Dashboard" class="button"><b>KEMBALI KE HOME</b></a>
   </p>
+  </div>
   <br>
   <h4><b>Raih impian Anda menuju kebebasan finansial dan kesejahteraan dengan passive income.</b></h4>
   <h4><b>Mimpi besar dimulai dengan langkah kecil, dan bonus besar dimulai dengan usaha konsisten.</b></h4>
