--- a/index.html
+++ b/index.html
@@ -92,23 +92,29 @@
       padding: 0 10px;
       text-align: left;
     }
-    h3 {
-      font-size: 1.5em;
+    h2 {
+      font-size: 1.1em;
       font-weight: bold;
-      color: #000;
+      color: #8B4513;
       text-align: center;
+    }
+    h3 {
+      font-size: 1em;
+      color: #0000CD;
+      text-align: center;
+      margin: 30px;
+      
     }
     h4 {
       font-size: 1.3em;
-      font-weight: bold;
-      color: #000;
+      color: #8B008B;
       text-align: center;
-      margin: 35px;
+      margin: 30px;
     }
     p {
       text-align: center;
       color: #000;
-      margin: 35px;
+      margin: 30px;
     }
     /* Tombol utama */
     .button {
@@ -182,8 +188,8 @@
   <div class="welcome-animation">
     <span><b>Setiap usaha tidak akan sia-sia, bonus dan komisi adalah hasilnya!</b></span>
   </div>
-  
-  <p><b>1. Kursus Bisnis: Membangun Pondasi Kesuksesan dalam Dunia Bisnis</b></p>
+  <h2>Belajar adalah kunci untuk membuka pintu masa depan yang cerah."</h2>
+  <h3>Bagi yang mendapatkan Bonus Kursus Online, silahkan pilih salah satu Kursus di bawah ini Klik tombol "Ambil Kursus" yang anda minati:</h3><p><b>1. Kursus Bisnis: Membangun Pondasi Kesuksesan dalam Dunia Bisnis</b></p>
 <p></p>
 <button class="toggle-button" onclick="toggleContent('content-box-1')">
     👉 Deskripsi Kursus
@@ -742,6 +748,10 @@
 <p>
     <a href="https://wa.me/6289522704503?text=Hallo%20Admin%20saya%20mendapatkan%20Bonus%20Tambahan%203%20saya%20pilih%20Kursus:%2020.%20Kursus%20Microsoft%20PowerPoint:%20Menguasai%20Presentasi%20Visual%20yang%20Mengesankan" class="button"><b>Ambil Kursus</b></a>
 </p>
+<div>
+  <h3>Jangan takut untuk belajar, karena ilmu adalah harta yang tak pernah habis.</h3>
+  <h3>Selamat mempelajari bagi Anda yang telah mendapatkan Bonus kursus.</h3>
+</div>
 
 <div>
   <p>
