--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
       font-size: 1.7em;
       font-family: 'Rubik', sans-serif;
       color: #8B0000;
-      text-shadow: 2px 2px 4px #fff;
+      text-shadow: 2px 2px 2px #fff;
       margin: 12px 0;
       overflow: hidden;
       white-space: nowrap;
@@ -76,7 +76,7 @@
       100% { transform: translateX(-100%); }
     }
     .content {
-      max-width: 90%;
+      max-width: 92%;
       margin: 30px auto;
       padding: 20px;
       background-color: #FFFFFF;
@@ -88,20 +88,22 @@
       text-align: left;
     }
     .content p {
-      margin: 10px 0;
-      padding: 0 10px;
+      margin: 5px 0;
+      padding: 0 5px;
       text-align: left;
     }
     h2 {
       font-size: 1.1em;
-      font-weight: bold;
-      color: #8B4513;
+      color: #B8860B;
       text-align: center;
+      text-shadow: 2px 2px 2px #fff;
+      margin: 30px;
     }
     h3 {
       font-size: 1em;
       color: #0000CD;
       text-align: center;
+      text-shadow: 2px 2px 2px #fff;
       margin: 30px;
       
     }
