--- a/index.html
+++ b/index.html
@@ -94,16 +94,16 @@
     }
     h2 {
       font-size: 1.1em;
-      color: #B8860B;
+      color: #800000;
       text-align: center;
-      text-shadow: 2px 2px 2px #fff;
+      text-shadow: 1px 1px 1px #fff;
       margin: 30px;
     }
     h3 {
       font-size: 1em;
-      color: #0000CD;
+      color: #114B5F;
       text-align: center;
-      text-shadow: 2px 2px 2px #fff;
+      text-shadow: 1px 1px 1px #fff;
       margin: 30px;
       
     }
@@ -161,7 +161,7 @@
       color: #333;
       font-size: 16px;
       line-height: 1.6;
-      padding: 20px;
+      padding: 7px;
       border-radius: 10px;
       box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
       margin: 20px auto;
