--- a/index.html
+++ b/index.html
@@ -76,9 +76,9 @@
       100% { transform: translateX(-100%); }
     }
     .content {
-      max-width: 92%;
-      margin: 30px auto;
-      padding: 20px;
+      max-width: 95%;
+      margin: 10px auto;
+      padding: 10px;
       background-color: #FFFFFF;
       box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1);
       border-radius: 12px;
@@ -158,12 +158,13 @@
       background: linear-gradient(to bottom, #FFD700, #FFA500);
       color: #333;
       font-size: 16px;
+      font-margin: 5px;
       line-height: 1.6;
-      padding: 7px;
+      padding: 5px;
       border-radius: 10px;
       box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
       margin: 7px auto;
-      max-width: 350px;
+      max-width: 400px;
       display: none; /* Tersembunyi secara default */
       text-align: justify;
     }
