--- a/index.html
+++ b/index.html
@@ -158,8 +158,9 @@
       background: linear-gradient(to bottom, #FFD700, #FFA500);
       color: #333;
       font-size: 16px;
-      font-margin: 5px;
-      line-height: 0.7;
+      margin: 5px;
+      padding: 5px 5px;
+      line-height: 1.6;
       padding: 5px;
       border-radius: 10px;
       box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
@@ -189,8 +190,9 @@
   <div class="welcome-animation">
     <span><b>Setiap usaha tidak akan sia-sia, bonus dan komisi adalah hasilnya!</b></span>
   </div>
-  <h2>Belajar adalah kunci untuk membuka pintu masa depan yang cerah."</h2>
-  <h3>Bagi yang mendapatkan Bonus Kursus Online, silahkan pilih salah satu Kursus di bawah ini Klik tombol "Ambil Kursus" yang anda minati:</h3><p><b>1. Kursus Bisnis: Membangun Pondasi Kesuksesan dalam Dunia Bisnis</b></p>
+  <h2><b>Belajar adalah kunci untuk membuka pintu masa depan yang cerah."</b></h2>
+  <h3><b></b>Bagi yang mendapatkan Bonus Kursus Online, silahkan pilih salah satu Kursus di bawah ini Klik tombol "Ambil Kursus" yang anda minati:</b></h3>
+  <p><b>1. Kursus Bisnis: Membangun Pondasi Kesuksesan dalam Dunia Bisnis</b></p>
 <p></p>
 <button class="toggle-button" onclick="toggleContent('content-box-1')">
     👉 Deskripsi Kursus
