--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
     }
     h3 {
       font-size: 1em;
-      color: #060608;
+      color: #FF8C00;
       text-align: center;
       margin: 30px;
       
@@ -191,7 +191,7 @@
     <span><b>Setiap usaha tidak akan sia-sia, bonus dan komisi adalah hasilnya!</b></span>
   </div>
   <h2><b>Belajar adalah kunci untuk membuka pintu masa depan yang cerah."</b></h2>
-  <h3><b></b>Bagi yang mendapatkan Bonus Kursus Online, silahkan pilih salah satu Kursus di bawah ini Klik tombol "Ambil Kursus" yang anda minati:</b></h3>
+  <h3><b>Bagi yang mendapatkan Bonus Kursus Online, silahkan pilih salah satu Kursus di bawah ini Klik tombol "Ambil Kursus" yang anda minati:</b></h3>
   <p><b>1. Kursus Bisnis: Membangun Pondasi Kesuksesan dalam Dunia Bisnis</b></p>
 <p></p>
 <button class="toggle-button" onclick="toggleContent('content-box-1')">
@@ -752,8 +752,8 @@
     <a href="https://wa.me/6289522704503?text=Hallo%20Admin%20saya%20mendapatkan%20Bonus%20Tambahan%203%20saya%20pilih%20Kursus:%2020.%20Kursus%20Microsoft%20PowerPoint:%20Menguasai%20Presentasi%20Visual%20yang%20Mengesankan" class="button"><b>Ambil Kursus</b></a>
 </p>
 <div>
-  <h3>Jangan takut untuk belajar, karena ilmu adalah harta yang tak pernah habis.</h3>
-  <h3>Selamat mempelajari bagi Anda yang telah mendapatkan Bonus kursus.</h3>
+  <h3><b>Jangan takut untuk belajar, karena ilmu adalah harta yang tak pernah habis.</b></h3>
+  <h3><b>Selamat mempelajari bagi Anda yang telah mendapatkan Bonus kursus.</b></h3>
 </div>
 
 <div>
